# access-security-system-e2e

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  VERSION  requirements.txt  run.py
.dev-tools/: README.md  clang_run.py
LaTeX_template/LaTeX/: bibliography.bib  latex_sablona.tex
Latex_doc/: IEEEtran.cls  bibliography.bib  latex_sablona.tex
Latex_doc/eps/: fig1.eps
access_admin/: CMakeLists.txt  README.md
access_admin/include/access_admin/: app_state.hpp  http_utils.hpp  routes_api.hpp
access_admin/include/access_admin/service/: access_service.hpp  audit_service.hpp  cards_service.hpp  db_service.hpp  door_roles_service.hpp  events_service.hpp  hw_service.hpp  readers_service.hpp  service_types.hpp  simulate_service.hpp
access_admin/src/: app_state.cpp  http_utils.cpp  main.cpp  routes_api.cpp
access_admin/src/service/: access_service.cpp  audit_service.cpp  cards_service.cpp  db_service.cpp  door_roles_service.cpp  events_service.cpp  hw_service.cpp  readers_service.cpp  service_types.cpp  simulate_service.cpp
access_core/: CMakeLists.txt  README.md
access_core/include/access_core/: frame_decryptor.hpp  handle_frame.hpp  protocol_anomaly_detector.hpp
access_core/src/: frame_decryptor.cpp  handle_frame.cpp  protocol_anomaly_detector.cpp
access_core/tests/: CMakeLists.txt  anomaly_detector_test.cpp  handle_frame_test.cpp
access_decision/: CMakeLists.txt  README.md
access_decision/include/access_decision/: access_store.hpp  audit.hpp  card_id_hasher.hpp  engine.hpp  payload.hpp  policy.hpp
access_decision/src/: card_id_hasher.cpp  engine.cpp  payload.cpp  policy.cpp
access_decision/tests/: CMakeLists.txt  engine_rotation_test.cpp  engine_test.cpp
access_storage/: CMakeLists.txt  README.md
access_storage/include/access_storage/: audit_verify.hpp  serialization.hpp  sqlite_access_store.hpp  sqlite_audit_log.hpp  sqlite_helpers.hpp
access_storage/src/: audit_verify.cpp  serialization.cpp  sqlite_access_store.cpp  sqlite_audit_log.cpp
access_storage/tests/: CMakeLists.txt  audit_chain_test.cpp  engine_sqlite_test.cpp
admin/: ui.py
analysis/: README.md  analyze.py  requirements.txt
client/: client  client.cpp
client/arduino/: arduino_cfg.ino  scaner.ino
cmake_other/: README.md  third_party.cmake
config/: README.md  profile_a1_r0.yaml  profile_a1_r1.yaml  profile_a1_r2.yaml  profile_a2_r0.yaml  profile_a2_r1.yaml  profile_a2_r2.yaml  profile_p0_baseline.yaml  profile_p1_chacha20.yaml  profile_p2_xchacha.yaml
config_loader/: CMakeLists.txt  README.md
config_loader/include/config_loader/: config.hpp
config_loader/src/: config.cpp
crypto_lib/: CMakeLists.txt  README.md
crypto_lib/include/crypto_lib/: crypto_utils.hpp  hkdf.hpp  nonce_generator.hpp  secure_aead.hpp
crypto_lib/src/: crypto_utils.cpp  hkdf.cpp  nonce_generator.cpp  secure_aead.cpp
crypto_lib/tests/: CMakeLists.txt  aead_roundtrip_test.cpp  hkdf_test.cpp
data/: README.md  access.db
db/: init_db.py
examples/: README.md  audit_verify.cpp  handle_frame_behaviour_demo.cpp
experiments/: CMakeLists.txt  README.md  run_e2e.sh
experiments/include/experiments/: experiment_context.hpp  frame_factory.hpp  metrics_collector.hpp  scenario_common.hpp  scenario_runner.hpp  seeded_nonce_generator.hpp
experiments/src/: experiment_context.cpp  frame_factory.cpp  metrics_collector.cpp  s1_replay.cpp  s2_tamper.cpp  s3_cross_reader.cpp  s3_rng_fault.cpp  s4_seq_reset.cpp  s5_tag_probe.cpp  s6_throughput.cpp  s7_nonce_tamper.cpp  scenario_common.cpp  scenario_runner.cpp  seeded_nonce_generator.cpp
hw_layer/: README.md  hw_config.h  hw_layer.ino
hw_simulation/: README.md  diagram.json  platformio.ini
hw_simulation/src/: main.ino
key_manager/: CMakeLists.txt  README.md
key_manager/include/key_manager/: hex_utils.hpp  key_manager.hpp
key_manager/src/: hex_utils.cpp  key_manager.cpp
latex_doc/: bibliography.bib  chapter_conclusion.tex  chapter_experiments.tex  latex_sablona.aux  latex_sablona.bbl  latex_sablona.blg  latex_sablona.lof  latex_sablona.out  latex_sablona.tex  latex_sablona.toc
latex_doc/plots/: baseline_correctness.tex  scenario_summary.tex  throughput_table.tex
logs/: access_control.db
protocol_lib/: CMakeLists.txt  README.md
protocol_lib/include/protocol_lib/: frame.hpp  frame_parser.hpp  packet.hpp  protocol_utils.hpp  replay_window.hpp
protocol_lib/src/: frame.cpp  frame_parser.cpp  packet.cpp  protocol_utils.cpp  replay_window.cpp
protocol_lib/tests/: CMakeLists.txt  frame_test.cpp  packet_test.cpp  replay_window_test.cpp
runtime_events/: CMakeLists.txt  README.md
runtime_events/include/runtime_events/: event_bus.hpp
runtime_events/src/: event_bus.cpp
secrets/: README.md
server/: server.py  server_config.ini
src/: main.cpp
src/startup/: CMakeLists.txt
src/startup/include/startup/: secure_frame_session.hpp
src/startup/src/: secure_frame_session.cpp
tukedip_output/: analyza.aux  analyza.tex  bibliography.bib  feidippp.aux  feidippp.cls  feidippp.out  feidippp.tex  feidippp.toc  feidipsp.aux  feidipsp.bbl  feidipsp.blg  feidipsp.cls  feidipsp.lot  feidipsp.out  feidipsp.tex  feidipsp.toc  formulacia.aux  formulacia.tex  jadroprace.aux  jadroprace.tex  literatura.aux  literatura.tex  prilohy.aux  prilohy.tex  tukedip.aux  tukedip.bbl  tukedip.blg  tukedip.lof  tukedip.lot  tukedip.out  tukedip.tex  tukedip.toc  tukediphc.cls  uvod.aux  uvod.tex  zaver.aux  zaver.tex
tukedip_output/plots/: baseline_correctness.tex  scenario_summary.tex  throughput_table.tex
web/: README.md  app.js  index.html
web/css/: styles.css
web/js/: app.js  audit.js  cards.js  db.js  doors.js  events.js  readers.js  utils.js
